--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1689,6 +1689,7 @@
 \newcommand{\Swxw}   {\Sw{xw}}
 \newcommand{\Swxq}   {\Sw{xq}}
 \newcommand{\Swrq}   {\Sw{rq}}
+\newcommand{\Swqr}   {\Sw{qr}}
 \newcommand{\Swrx}   {\Sw{rx}}
 \newcommand{\Swqx}   {\Sw{qx}}
 \newcommand{\Swqq}   {\Sw{qq}}
@@ -1856,6 +1857,7 @@
  \newcommand{\estHam}   {\estH_{\mathsfup{am}}}  % 
  \newcommand{\estHgm}   {\estH_{\mathsfup{gm}}}  % 
  \newcommand{\estHhm}   {\estH_{\mathsfup{hm}}}  % 
+ \newcommand{\estHls}   {\estH_{\mathsfup{ls}}}  % 
 
  \newcommand{\fCost}[0]{\mathfnct{C}}
  \newcommand{\vpo  } [0]{\vp_{\mathsfup{opt}}}
