fix opT_estH_mnoise illustration

--- a/common/math/graphics/system/opT_estH_mnoise.tex
+++ b/common/math/graphics/system/opT_estH_mnoise.tex
@@ -27,7 +27,6 @@
   % ADDERS: circles with $+$ inside
   %--------------------------------------------------------------------------
   \cnodeput{0}(-2.0,+0.00){addU}{$+$}%
-  \cnodeput{0}( 1.5,-0.75){addW}{$+$}%
   \cnodeput{0}( 1.5,+0.75){addV}{$+$}%
     % |     |   |    |     |      |____ $+$ in circle
     % |     |   |    |     |___________ node label
@@ -41,11 +40,9 @@
   \pnode(-3.00, 0.75){sysP}%
   \pnode(-3.00, 0.00){sysU}%
   \pnode(-2.00,-0.75){sysX}%
-  \pnode(+2.50,-0.75){sysS}%
   \pnode(+2.50, 0.75){sysY}%
-  \pnode( 0.85,-0.75){sysR}%
+  \pnode( 1.50,-0.75){sysR}%
   \pnode( 0.85, 0.75){sysQ}%
-  \pnode(+1.50, 0.00){sysW}%
   \pnode(+1.50, 1.50){sysV}%
   \nnode{-2.00}{0.75}{sysPp}%
   \nnode{-1.25}{0.75}{sysPg}%
@@ -58,26 +55,24 @@
   %-------------------------------------
   \uput[180](sysP) {$\rvp(n)$}%
   \uput[-90](sysX) {$\rvx(n)$}%
-  \uput[  0](sysS) {$\rvs(n)$}%
   \uput[  0](sysY) {$\rvy(n)$}%
   \uput[ 90](sysV) {$\rvv(n)$}%
   \uput[180](sysU) {$\rvu(n)$}%
-  \uput[ 90](sysW) {$\rvw(n)$}%
-  \uput[ 90](sysR) {$\rvr(n)$}%
+  \uput[  0](sysR) {$\rvr(n)$}%
   \uput[-90](sysQ) {$\rvq(n)$}%
   %-------------------------------------
   % system connections                     sysV
   %                             _____        |
   %          sysPp  sysPg      |     | sysQ  v 
   %    sysP ----o-----o------->|  T  |----->(+)------> sysY 
-  %             |     |        |_____|     addV
+  %             |     |        |_____|      addV
   %             v     |                  
   %    sysU -->(+)    |         __|__(0,0)
-  %         addU|     |           |        sysW
-  %             |     |         _____        |
-  %           sysX    |        |  ^  | sysR  v 
-  %                   o------->|  H  |----->(+)------> sysS 
-  %                 sysPh      |_____|     addW
+  %         addU|     |           |        
+  %             |     |         _____         
+  %           sysX    |        |  ^  |
+  %                   o------->|  H  |-----> sysR
+  %                 sysPh      |_____|     
   %-------------------------------------
   \ncline{->}{sysP}{sysT}%
   \ncline{->}{sysPp}{addU}%
@@ -85,12 +80,10 @@
   \ncline{sysPg}{sysPh}%
   \ncline{->}{addU}{sysX}%
   \ncline{->}{sysPh}{sysH}%
+  \ncline{->}{sysH}{sysR}%
   \ncline{->}{sysT}{addV}%
-  \ncline{->}{sysH}{addW}%
-  \ncline{->}{addW}{sysS}%
   \ncline{->}{addV}{sysY}%
   \ncline{->}{sysU}{addU}%
-  \ncline{->}{sysW}{addW}%
   \ncline{->}{sysV}{addV}%
   %-------------------------------------
   % development support--comment out before final version
