least square system estimation corollary pair

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -561,35 +561,32 @@ as demonstrated in the next theorem.
     \hline
      \tbox{\includegraphics{graphics/opT_estH_cnoise.pdf}}
     &\tbox{\includegraphics{graphics/opT_estH_mnoise.pdf}}
-    \\(A) & (B)
+    \\(A) LS estimation for communication  &(B) LS estimation for measurement
+    \\    noise system \xref{cor:H1LSa}    &    noise system \xref{cor:H1LSb}
     \\\hline
   \end{tabular}
   \caption{Least Square estimation \xref{thm:estHls}\label{fig:estHls}}
 \end{figure}
 %---------------------------------------
-\begin{theorem}[Best LTI least-squares estimate $\estH$ of $\fH$]
-\footnote{
-  \citerppgc{bendat1980}{98}{100}{0471058874}{5.1.1 Optimal Character of Calculations; note: proof minimizing $\Swvv$ but yields same result},
-  \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations}
-  }
+\begin{theorem}[Optimal LTI least-squares estimate $\estH$ of $\fH$]
 \label{thm:estHls}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:estHls} (A) or (B).
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A) or (B).
 Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
 \thmbox{
   \brbr{\begin{array}{FMMD}
       (A).& $\rvx$, $\rvu$, and $\rvv$ are & \prope{WSS}          & and
     \\(B).& $\rvx$, $\rvu$, and $\rvv$ are & \prope{uncorrelated} & and
     \\(C).& $\pE\rvu=\pE\rvu=0$            & (\prope{zero-mean})  & and
-    \\(D).& $\estH$ is \prope{LTI}         &                      &
+    \\(D).& $\estHls$ is \prope{LTI}         &                      &
   \end{array}}
   \implies
   \brbl{\begin{array}{c}
-    \ds\argmin_{\estH}\norm{\FW(\omega)-\FQ(\omega)}^2 = \frac{\Swyp(\omega)}{\Swpp(\omega)}
+    \ds\argmin_{\estH}\norm{\FR(\omega)-\FQ(\omega)}^2 = \frac{\Swyp(\omega)}{\Swpp(\omega)}
     \\
-    \brp{\begin{array}{M}
-      \scs The optimal \prope{LTI} \prope{least-squares} estimate of $\FH$ is
-      \\$\estHls=\ffrac{\Swyp}{\Swpp}$
+    \brp{\begin{array}{N}
+      \scs The optimal \prope{LTI} \prope{least-squares} estimate of $\opT$ is
+      \\$\estHls(\omega)=\ffrac{\Swyp(\omega)}{\Swpp(\omega)}$
     \end{array}}
   \end{array}}
   }
@@ -693,94 +690,90 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
 \end{enumerate}
 \end{proof}
 
-%---------------------------------------
-\begin{corollary}
-\label{cor:H1LSa}
-%---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:estHls} (A).
-\corbox{
-  \brb{\begin{array}{FMD}
-      &hypotheses of \prefpp{thm:estHls} & 
-    %\\(B).&$\rvu(n) = 0$\quad\text{\scs(zero input noise)}
-  \end{array}}
-  \implies
-  \estHls(\omega) = \frac{\Swyx(\omega) + \Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
-  }
-\end{corollary}
-\begin{proof}
-  \begin{align*}
-    \estHls(\omega)
-      &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
-      && \text{by \prefp{thm:estHls}}
-    \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
-    \\&= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
-  \end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:H1LSa}
-%---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:estHls} (B).
-\corbox{
-  \brb{\begin{array}{FMD}
-      &hypotheses of \prefpp{thm:estHls} & 
-    %\\(B).&$\rvu(n) = 0$\quad\text{\scs(zero input noise)}
-  \end{array}}
-  \implies
-  \estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swww(\omega)}
-  }
-\end{corollary}
-\begin{proof}
-  \begin{align*}
-    \estHls(\omega)
-      &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
-      && \text{by \prefp{thm:estHls}}
-    \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)-\Swww(\omega)}
-    \\&= \frac{\Swyx(\omega)-\Swyw(\omega)}{\Swxx(\omega)-\Swww(\omega)}
-    \\&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyw(\omega)}}{\Swxx(\omega)-\Swww(\omega)}
-  \end{align*}
-\end{proof}
-
 It follows immediately from \prefpp{thm:estHls} that, in the special case
 of no input noise ($\rvu(n)=0$), $\estHa$ is the best
 least-squares estimate of $\FH$ (next corollary).
 Moreover, in the special case of $\FH$ being \prope{linear time invariant} (\prope{LTI}),
 then $\estHa$ is not only the best least-squares estimate, but $\estHa$ actually exactly equals $\FH$
 \xref{cor:estH1}.
+
 %---------------------------------------
 \begin{corollary}
 \footnote{
   \citerppgc{bendat1980}{98}{100}{0471058874}{5.1.1 Optimal Character of Calculations; note: proof minimizing $\Swvv$ but yields same result},
   \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations}
   }
-\label{cor:H1LS}
+\label{cor:H1LSa}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:H1LS}.
-Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A).
 \corbox{
-  \brb{\begin{array}{FMD}
-      (A).&hypotheses of \prefpp{thm:H1LS} & and
-    \\(B).&$\rvu(n) = 0$\quad\text{\scs(zero input noise)}
+  \begin{array}{F>{\ds}rc>{\ds}l}
+    (1).&\brb{\text{hypotheses of \prefp{thm:estHls}}}
+        &\implies
+        &\estHls(\omega) = \frac{\Swyx(\omega) + \Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
+    \\
+    (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\vu(n)=0$}}
+        &\implies
+        &\estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)} = \estHa(\omega)
   \end{array}}
-  \implies
-  {\mcom{\argmin_{\estH}\norm{\FW(\omega)-\FQ(\omega)}^2 = \estHa(\omega)}
-       {$\estHa$ is the optimal \prope{least-squares estimator} of $\FH$}}
-  }
 \end{corollary}
 \begin{proof}
   \begin{align*}
-    \estH(\omega)
-      &= \frac{\Swyx(\omega)}{\Swxx(\omega) + \Swuu(\omega)}
-      && \text{by \prefp{thm:H1LS}}
+    \text{(1):\quad}\estHls(\omega)
+      &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
+      && \text{by \prefp{thm:estHls}}
+    \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
+    \\&= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
+    \\
+    \text{(2):\quad}\estHls(\omega)
+      &= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
+      && \text{by previous result}
+      && \text{(1)}
     \\&= \frac{\Swyx(\omega)}{\Swxx(\omega)}
-      && \text{by \prope{zero input noise} hypothesis}
-      && \text{(B)}
+      && \text{by $\rvu(n)=0$ hypothesis}
     \\&\eqd \estHa(\omega)
       && \text{by definition of $\estHa$}
       && \text{\xref{def:H1}}
   \end{align*}
 \end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\label{cor:H1LSb}
+%---------------------------------------
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
+\corbox{
+  \begin{array}{F>{\ds}rc>{\ds}l}
+    (1).&\brb{\text{hypotheses of \prefp{thm:estHls}}}
+        &\implies
+        &\estHls(\omega) = \frac{\Swyx(\omega) + \Swyu(\omega)}{\Swxx(\omega)-\Swww(\omega)}
+    \\
+    (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\vw(n)=0$}}
+        &\implies
+        &\estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)} = \estHa(\omega)
+  \end{array}}
+\end{corollary}
+\begin{proof}
+  \begin{align*}
+    \text{(1):\quad}\estHls(\omega)
+      &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
+      && \text{by \prefp{thm:estHls}}
+    \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)-\Swww(\omega)}
+    \\&= \frac{\Swyx(\omega)-\Swyw(\omega)}{\Swxx(\omega)-\Swww(\omega)}
+    \\&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyw(\omega)}}{\Swxx(\omega)-\Swww(\omega)}
+    \\
+    \text{(2):\quad}\estHls(\omega)
+      &= \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swww(\omega)}
+      && \text{by previous result}
+      && \text{(1)}
+    \\&= \frac{\Swyx(\omega)}{\Swxx(\omega)}
+      && \text{by $\rvw(n)=0$ hypothesis}
+    \\&\eqd \estHa(\omega)
+      && \text{by definition of $\estHa$}
+      && \text{\xref{def:H1}}
+  \end{align*}
+\end{proof}
+
 
 %=======================================
 \section{Properties of LTI systems}
@@ -796,7 +789,7 @@ results, such as those in this section.
 \label{thm:estH1_cnoise}
 \label{thm:estH2_cnoise}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (A).
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise} (A).
 \thmboxt{
   $\brb{\begin{array}{FMMD}
       (A).& $\fH$ is                                &\prope{linear time invariant} & and
@@ -861,7 +854,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (A).
 \label{thm:estH1_mnoise}
 \label{thm:estH2_mnoise}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise} (B).
 \thmboxt{
   $\brb{\begin{array}{FMMD}
       (A).& $\fH$ is                                &\prope{linear time invariant} & and
